Change of JUL 2016

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <span id="globe" style="margin-top: 10px; float: right;"> </span>
 </h1>
 
-<p>自 2009.07 起的 <strong>36 段旅程</strong>（中国）中，铁路 47265 km，航空 5932 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>58190 km</strong>。</p>
+<p>自 2009.07 起的 <strong>40 段旅程</strong>（中国）中，铁路 49042 km，航空 11584 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>65619 km</strong>。</p>
 
 <p>最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August 2013</a>)</p>
 
@@ -142,13 +142,13 @@
 
 <h3>乘降过的站点</h3>
 
-<p>按照第一次到达顺序排列，共计 96 个铁路车站，14 个航空站，6 个港口。</p>
+<p>按照第一次到达顺序排列，共计 97 个铁路车站，16 个航空站，10 个港口。</p>
 
-<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr>、<abbr title="-BJY">宝鸡站</abbr>、<abbr title="-OYJ">水源站</abbr>、<abbr title="-LAJ">兰州西站</abbr>、<abbr title="-XNO">西宁站</abbr>、<abbr title="-EAY">西安北站</abbr>、<abbr title="-HDY">华山北站</abbr>、<abbr title="-HSY">华山站</abbr>、<abbr title="-ZAF">郑州东站</abbr>、<abbr title="-TAK">泰山站</abbr>、<abbr title="-TMK">泰安站</abbr>、<abbr title="-JQO">九龙站</abbr>、<abbr title="-GGQ">广州东站</abbr>、<abbr title="-BOP">北京东站</abbr>、<abbr title="-AJP">燕郊站</abbr>、<abbr title="-XMS">厦门站</abbr>、<abbr title="-XKS">厦门北站</abbr></p>
+<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr>、<abbr title="-BJY">宝鸡站</abbr>、<abbr title="-OYJ">水源站</abbr>、<abbr title="-LAJ">兰州西站</abbr>、<abbr title="-XNO">西宁站</abbr>、<abbr title="-EAY">西安北站</abbr>、<abbr title="-HDY">华山北站</abbr>、<abbr title="-HSY">华山站</abbr>、<abbr title="-ZAF">郑州东站</abbr>、<abbr title="-TAK">泰山站</abbr>、<abbr title="-TMK">泰安站</abbr>、<abbr title="-JQO">九龙站</abbr>、<abbr title="-GGQ">广州东站</abbr>、<abbr title="-BOP">北京东站</abbr>、<abbr title="-AJP">燕郊站</abbr>、<abbr title="-XMS">厦门站</abbr>、<abbr title="-XKS">厦门北站</abbr>、<abbr title="-KAH">苏州园区站</abbr></p>
 
-<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr></p>
+<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr>、<abbr title="SWA/ZGOW">揭阳潮汕机场</abbr>、<abbr title="NAY/ZBNY">北京南苑机场</abbr></p>
 
-<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港、厦门厦金客运码头、厦门三丘田码头</p>
+<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港、闵行轮渡站、西渡轮渡站、复兴东路轮渡站、东昌路轮渡站、厦门厦金客运码头、厦门三丘田码头</p>
 
 </div>
 
@@ -156,9 +156,9 @@
 
 <h3>到达过的地级行政区</h3>
 
-<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市、宝鸡市、渭南市、泰安市、廊坊市、厦门市</p>
+<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市、宝鸡市、渭南市、泰安市、廊坊市、厦门市、揭阳市、汕头市</p>
 
-<p>共计 63 个</p>
+<p>共计 65 个</p>
 
 <p>（按第一次到达时间顺序排列，特区、直辖市以及台湾省辖县市比照地级行政区计算；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均列入统计，不列明细）</p>
 
@@ -389,7 +389,7 @@
 
 <h3>逐次背包旅行</h3>
 
-<p>共计 36 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
+<p>共计 40 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
 
 <h6>成都-峨眉山-三峡 (July 2009):</h6>
 
@@ -417,7 +417,7 @@
 
 <p>山东省: 青岛市、济南市</p>
 
-<h6>苏州 (March '13, June '13, July '13, September ‘13, June '15, December 2015):</h6>
+<h6>苏州 (March '13, June '13, July '13, September ‘13, June '15, December '15, June 2016):</h6>
 
 <p>江苏省: 苏州市</p>
 
@@ -529,7 +529,7 @@
 
 <h6>毕业环线 (July 2015):</h6>
 
-<p>上海-湖南-陕西-甘肃-青海-河南-山东-上海-浙江-上海-江苏-上海-香港-广东-湖南</p>
+<p>上海-湖南-陕西-甘肃-青海-陕西-河南-山东-上海-浙江-上海-江苏-上海-香港-广东-湖南</p>
 
 <p>陕西省: 西安市、宝鸡市、渭南市（华山）</p>
 
@@ -552,6 +552,94 @@
 <h6>厦门 (November 2015):</h6>
 
 <p>福建省: 福州市、厦门市</p>
+
+<h6>潮汕 (December 2015):</h6>
+
+<p>广东省: 揭阳市、汕头市</p>
+
+<h6>北京 (May 2016):</h6>
+
+<p>北京市</p>
+
+<p>河北省: 廊坊市香河县</p>
+
+<h6>西安 (July 2016):</h6>
+
+<p>陕西省: 咸阳市、西安市及临潼区</p>
+
+<hr />
+
+<h3><a id="museum"></a>博物馆</h3>
+
+<p>为了统计方便，此条目包含了境外博物馆。</p>
+
+<table>
+<tbody>
+<tr><td><i>2010 及以前</i></td></tr>
+<tr><td><b>湖南省博物馆</b></td></tr>
+<tr><td>长沙市博物馆（清水塘旧馆）</td></tr>
+<tr><td>长沙简牍博物馆</td></tr>
+<tr><td><b>北京故宫博物院</b></td></tr>
+<tr><td>郑州二七纪念馆</td></tr>
+<tr><td>成都武侯祠博物馆</td></tr>
+<tr><td>成都杜甫草堂博物馆</td></tr>
+<tr><td><b>成都金沙遗址博物馆</b></td></tr>
+<tr><td>重庆中国三峡博物馆</td></tr>
+<tr><td>奉节白帝城博物馆</td></tr>
+<tr><td>北京首都博物馆</td></tr>
+<tr><td>蓬莱极地海洋馆</td></tr>
+<tr><td>烟台张裕酒文化博物馆</td></tr>
+<tr><td><br /><i>2010 至今境内部分</i></td></tr>
+<tr><td>上海科技馆 (2011)</td></tr>
+<tr><td>上海中共一大会址纪念馆 (2011)</td></tr>
+<tr><td>青岛德国总督楼旧址博物馆 (2012)</td></tr>
+<tr><td>长沙铜官窑遗址博物馆 (2012)</td></tr>
+<tr><td><b>苏州博物馆</b> (2013, 2014, 2015)</td></tr>
+<tr><td>浙江省博物馆（孤山馆区）(2013)</td></tr>
+<tr><td>江西省博物馆 (2013)</td></tr>
+<tr><td>无锡博物院 (2013)</td></tr>
+<tr><td>宁波天一阁博物馆 (2013)</td></tr>
+<tr><td>青海省博物馆 (2014)</td></tr>
+<tr><td>南京孙中山纪念馆 (2014)</td></tr>
+<tr><td>南京梅园新村纪念馆 (2014)</td></tr>
+<tr><td>南京中国近代史遗址博物馆（总统府）(2014)</td></tr>
+<tr><td><b>南京博物院</b> (2014)</td></tr>
+<tr><td>北京孔庙和国子监博物馆 (2014)</td></tr>
+<tr><td><b>上海博物馆</b> (2014, 2015)</td></tr>
+<tr><td>九江庐山会议旧址纪念馆 (2014)</td></tr>
+<tr><td><b>湖北省博物馆</b> (2014)</td></tr>
+<tr><td>甘肃省博物馆 (2015)</td></tr>
+<tr><td><b>陕西历史博物馆</b> (2015, 2016)</td></tr>
+<tr><td><b>西安碑林博物馆</b> (2015)</td></tr>
+<tr><td><b>西安唐皇城墙含光门遗址博物馆</b> (2015)</td></tr>
+<tr><td>厦门风琴博物馆 (2015)</td></tr>
+<tr><td>苏州城墙博物馆（相门）(2015)</td></tr>
+<tr><td>长沙市博物馆（三角洲新馆）(2016)</td></tr>
+<tr><td>长沙规划展示馆 (2016)</td></tr>
+<tr><td>苏州评弹博物馆 (2016)</td></tr>
+<tr><td><b>西安秦始皇帝陵博物院</b> (2016)</td></tr>
+<tr><td>西安半坡博物馆 (2016)</td></tr>
+<tr><td>上海当代艺术博物馆 (2016)</td></tr>
+<tr><td><b>上海自然博物馆（山海关路新馆）</b>(2016)</td></tr>
+<tr><td><br /><i>2010 至今境外部分</i></td></tr>
+<tr><td><b>台北国立故宫博物院</b> (2013)</td></tr>
+<tr><td>台北国立台湾博物馆 (2013)</td></tr>
+<tr><td><b>台北二二八纪念馆</b> (2013)</td></tr>
+<tr><td>台北国立中正纪念堂 (2013)</td></tr>
+<tr><td>台北国立国父纪念馆 (2013)</td></tr>
+<tr><td>台北中央研究院近代史研究所胡适纪念馆 (2013)</td></tr>
+<tr><td>台湾国家人权博物馆（绿岛园区）(2013)</td></tr>
+<tr><td>高雄打狗英国领事馆文化园区 (2013)</td></tr>
+<tr><td>高雄市立历史博物馆 (2013)</td></tr>
+<tr><td>香港科学馆 (2015)</td></tr>
+<tr><td><b>香港历史博物馆</b> (2015)</td></tr>
+<tr><td><b>Computer History Museum</b>, Mountain View, CA (2015)</td></tr>
+<tr><td>USS Arizona Memorial, Honolulu, HI (2016)</td></tr>
+<tr><td>USS Missouri Memorial, Honolulu, HI (2016)</td></tr>
+<tr><td>USS Bowfin Submarine Museum &amp; Park, Honolulu, HI (2016)</td></tr>
+<tr><td><b>SFMOMA</b>, San Francisco, CA (2016)</td></tr>
+</tbody>
+</table>
 
 <hr />
 
@@ -806,6 +894,11 @@
 <td>2</td>
 </tr>
 <tr>
+<td>西安</td>
+<td>长安通</td>
+<td>1</td>
+</tr>
+<tr>
 <td>郑州</td>
 <td>绿城通</td>
 <td>1</td>
@@ -999,7 +1092,7 @@ if(document.body.clientWidth < 450) {
 
 <p><!--<a href="http://cnphil.com/">-->Phil Xiaojun Hu<!--</a>--></p>
 
-<p><i>Last updated: Thu Dec 10 14:17:31 UTC 2015</i></p>
+<p><i>Last updated: Sun Jul 24 17:06:01 UTC 2016</i></p>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
