--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <span id="globe" style="margin-top: 10px; float: right;"> </span>
 </h1>
 
-<p>自 2009.07 起的 <strong>40 段旅程</strong>（中国）中，铁路 49042 km，航空 11584 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>65619 km</strong>。</p>
+<p>自 2009.07 起的 <strong>48 段旅程</strong>（中国）中，铁路 55961 km，航空 13683 km，公路 3099 km，自驾 906 km，航运 726 km，骑行 255 km，其他 7 km，共计 <strong>74637 km</strong>。</p>
 
 <p>最佳旅行: 穿越 5 省 11 市的独自骑行台湾成年之旅 (<a href="#featured">August 2013</a>)</p>
 
@@ -142,13 +142,13 @@
 
 <h3>乘降过的站点</h3>
 
-<p>按照第一次到达顺序排列，共计 97 个铁路车站，16 个航空站，10 个港口。</p>
+<p>按照第一次到达顺序排列，共计 100 个铁路车站，18 个航空站，12 个港口。</p>
 
-<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr>、<abbr title="-BJY">宝鸡站</abbr>、<abbr title="-OYJ">水源站</abbr>、<abbr title="-LAJ">兰州西站</abbr>、<abbr title="-XNO">西宁站</abbr>、<abbr title="-EAY">西安北站</abbr>、<abbr title="-HDY">华山北站</abbr>、<abbr title="-HSY">华山站</abbr>、<abbr title="-ZAF">郑州东站</abbr>、<abbr title="-TAK">泰山站</abbr>、<abbr title="-TMK">泰安站</abbr>、<abbr title="-JQO">九龙站</abbr>、<abbr title="-GGQ">广州东站</abbr>、<abbr title="-BOP">北京东站</abbr>、<abbr title="-AJP">燕郊站</abbr>、<abbr title="-XMS">厦门站</abbr>、<abbr title="-XKS">厦门北站</abbr>、<abbr title="-KAH">苏州园区站</abbr></p>
+<p><strong>铁路车站</strong>: <abbr title="-CSQ">长沙站</abbr>、<abbr title="-GZQ">广州站</abbr>、<abbr title="-MMZ">茂名站</abbr>、<abbr title="-BXP">北京西站</abbr>、<abbr title="-ZVQ">肇庆站</abbr>、<abbr title="-SZQ">深圳站</abbr>、<abbr title="-ZZF">郑州站</abbr>、<abbr title="-CDW">成都站</abbr>、<abbr title="-YAK">烟台站</abbr>、<abbr title="-JNK">济南站</abbr>、<abbr title="-SNH">上海南站</abbr>、<abbr title="-HZH">杭州站</abbr>、<abbr title="-JSH">嘉善站</abbr>、<abbr title="-AOH">上海虹桥站</abbr>、<abbr title="-ICW">成都东站</abbr>、<abbr title="-IZQ">广州南站</abbr>、<abbr title="-ZIQ">珠海北站</abbr>、<abbr title="-CWQ">长沙南站</abbr>、<abbr title="-QDK">青岛站</abbr>、<abbr title="-SHH">上海站</abbr>、<abbr title="-SZH">苏州站</abbr>、<abbr title="-NCG">南昌站</abbr>、<abbr title="-JXH">嘉兴站</abbr>、<abbr title="-HGH">杭州东站</abbr>、<abbr title="-IOQ">深圳北站</abbr>、<abbr title="TRA-100">台北车站</abbr>、<abbr title="TRA-051">花莲车站</abbr>、<abbr title="TRA-004">台东车站</abbr>、<abbr title="TRA-203">枋寮车站</abbr>、<abbr title="TRA-185">高雄车站</abbr>、<abbr title="TRA-097">南港车站</abbr>、<abbr title="TRA-288">新左营车站</abbr>、<abbr title="-FZS">福州站</abbr>、<abbr title="-ZZQ">株洲站</abbr>、<abbr title="-WCN">武昌站</abbr>、<abbr title="-ZAQ">株洲西站</abbr>、<abbr title="-WHN">武汉站</abbr>、<abbr title="-NKH">南京南站</abbr>、<abbr title="-OHH">苏州北站</abbr>、<abbr title="-BGH">金山卫站</abbr>、<abbr title="-WXH">无锡站</abbr>、<abbr title="-NVH">宁波东站</abbr>、<abbr title="-FHH">奉化站</abbr>、<abbr title="-REH">金山园区站</abbr>、<abbr title="-TVH">亭林站</abbr>、<abbr title="-YOH">叶榭站</abbr>、<abbr title="-MIH">车墩站</abbr>、<abbr title="-XQH">新桥站</abbr>、<abbr title="-CSA">春申站</abbr>、<abbr title="-SXH">上海西站</abbr>、<abbr title="-HKH">黄山站</abbr>、<abbr title="-OVH">歙县站</abbr>、<abbr title="-TYV">太原站</abbr>、<abbr title="-PYV">平遥站</abbr>、<abbr title="-SJP">石家庄站</abbr>、<abbr title="-LZJ">兰州站</abbr>、<abbr title="-XXO">西宁西站</abbr>、<abbr title="-XAY">西安站</abbr>、<abbr title="-SYQ">邵阳站</abbr>、<abbr title="-NJH">南京站</abbr>、<abbr title="-VNH">中华门站</abbr>、<abbr title="-BJP">北京站</abbr>、<abbr title="-QHP">清华园站</abbr>、<abbr title="-VAP">北京北站</abbr>、<abbr title="-VNP">北京南站</abbr>、<abbr title="-TXP">天津西站</abbr>、<abbr title="-TJP">天津站</abbr>、<abbr title="-HCP">黄村站</abbr>、<abbr title="-TIP">天津南站</abbr>、<abbr title="-JJG">九江站</abbr>、<abbr title="-HKN">汉口站</abbr>、<abbr title="-ASH">安亭北站</abbr>、<abbr title="-ZJH">镇江站</abbr>、<abbr title="-GIW">贵阳站</abbr>、<abbr title="-GBW">贵阳北站</abbr>、<abbr title="-GBQ">广州北站</abbr>、<abbr title="-FCQ">肇庆东站</abbr>、<abbr title="-UCH">芦潮港站</abbr>、<abbr title="-ZEH">镇江南站</abbr>、<abbr title="-YLH">扬州站</abbr>、<abbr title="-BJY">宝鸡站</abbr>、<abbr title="-OYJ">水源站</abbr>、<abbr title="-LAJ">兰州西站</abbr>、<abbr title="-XNO">西宁站</abbr>、<abbr title="-EAY">西安北站</abbr>、<abbr title="-HDY">华山北站</abbr>、<abbr title="-HSY">华山站</abbr>、<abbr title="-ZAF">郑州东站</abbr>、<abbr title="-TAK">泰山站</abbr>、<abbr title="-TMK">泰安站</abbr>、<abbr title="-JQO">九龙站</abbr>、<abbr title="-GGQ">广州东站</abbr>、<abbr title="-BOP">北京东站</abbr>、<abbr title="-AJP">燕郊站</abbr>、<abbr title="-XMS">厦门站</abbr>、<abbr title="-XKS">厦门北站</abbr>、<abbr title="-KAH">苏州园区站</abbr>、<abbr title="-TCH">桐乡站</abbr>、<abbr title="-NXG">南昌西站</abbr>、<abbr title="-LLF">洛阳龙门站</abbr></p>
 
-<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr>、<abbr title="SWA/ZGOW">揭阳潮汕机场</abbr>、<abbr title="NAY/ZBNY">北京南苑机场</abbr></p>
+<p><strong>航空站</strong>: <abbr title="CSX/ZGHA">长沙黄花机场</abbr>、<abbr title="SYX/ZJSY">三亚凤凰机场</abbr>、<abbr title="TAO/ZSQD">青岛流亭机场</abbr>、<abbr title="TNA/ZSJN">济南遥墙机场</abbr>、<abbr title="PVG/ZSPD">上海浦东机场</abbr>、<abbr title="SHA/ZSSS">上海虹桥机场</abbr>、<abbr title="SZX/ZGSZ">深圳宝安机场</abbr>、<abbr title="TPE/RCTP">台北桃园机场</abbr>、<abbr title="KHH/RCKH">高雄小港机场</abbr>、<abbr title="FOC/ZSFZ">福州长乐机场</abbr>、<abbr title="LHW/ZLLL">兰州中川机场</abbr>、<abbr title="XIY/ZLXY">西安咸阳机场</abbr>、<abbr title="TSN/ZBTJ">天津滨海机场</abbr>、<abbr title="TXN/ZSTX">黄山屯溪机场</abbr>、<abbr title="SWA/ZGOW">揭阳潮汕机场</abbr>、<abbr title="NAY/ZBNY">北京南苑机场</abbr>、<abbr title="CAN/ZGGG">广州白云机场</abbr>、<abbr title="LYA/ZHLY">洛阳北郊机场</abbr></p>
 
-<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港、闵行轮渡站、西渡轮渡站、复兴东路轮渡站、东昌路轮渡站、厦门厦金客运码头、厦门三丘田码头</p>
+<p><strong>港口</strong>: 重庆朝天门码头、宜昌港九码头、台东富冈港、绿岛南寮港、闵行轮渡站、西渡轮渡站、复兴东路轮渡站、东昌路轮渡站、厦门厦金客运码头、厦门三丘田码头、泰东路轮渡站、公平路轮渡站</p>
 
 </div>
 
@@ -156,9 +156,9 @@
 
 <h3>到达过的地级行政区</h3>
 
-<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市、宝鸡市、渭南市、泰安市、廊坊市、厦门市、揭阳市、汕头市</p>
+<p>广州市、茂名市、北京市、佛山市、肇庆市、深圳市、郑州市、三亚市、成都市、乐山市、重庆市、宜昌市、青岛市、烟台市、济南市、上海市、杭州市、嘉兴市、桂林市、珠海市、澳门特别行政区、苏州市、南昌市、黄山市、香港特别行政区、桃园县、台北市、花莲县、台东县、屏东县、高雄市、福州市、武汉市、南京市、无锡市、宁波市、太原市、晋中市、石家庄市、兰州市、西宁市、海南藏族自治州、西安市、咸阳市、天津市、九江市、镇江市、贵阳市、扬州市、宝鸡市、渭南市、泰安市、廊坊市、厦门市、揭阳市、汕头市、洛阳市</p>
 
-<p>共计 65 个</p>
+<p>共计 66 个</p>
 
 <p>（按第一次到达时间顺序排列，特区、直辖市以及台湾省辖县市比照地级行政区计算；湖南省全境 14 个地州市中除郴州市、怀化市、娄底市、益阳市以及张家界市以外均列入统计，不列明细）</p>
 
@@ -389,7 +389,7 @@
 
 <h3>逐次背包旅行</h3>
 
-<p>共计 40 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
+<p>共计 48 段背包旅行，不含非自助旅行、因公出行以及湖南、上海境内的短途旅行。</p>
 
 <h6>成都-峨眉山-三峡 (July 2009):</h6>
 
@@ -417,11 +417,11 @@
 
 <p>山东省: 青岛市、济南市</p>
 
-<h6>苏州 (March '13, June '13, July '13, September ‘13, June '15, December '15, June 2016):</h6>
+<h6>苏州 (March '13, June '13, July '13, September '13, November '14, June '15, December '15, June '16, December 2016):</h6>
 
 <p>江苏省: 苏州市</p>
 
-<h6>杭州 (March '13, July 2013):</h6>
+<h6>杭州 (March '13, July '13, November '16, December 2016):</h6>
 
 <p>浙江省: 杭州市</p>
 
@@ -485,7 +485,7 @@
 
 <p>陕西省: 西安市、咸阳市</p>
 
-<h6>南京 (March 2014):</h6>
+<h6>南京 (March '14, April '14, August 2016):</h6>
 
 <p>江苏省: 南京市</p>
 
@@ -494,10 +494,6 @@
 <p>北京市</p>
 
 <p>天津市</p>
-
-<h6>南京 (April 2014):</h6>
-
-<p>江苏省: 南京市</p>
 
 <h6>黄山 (July 2014):</h6>
 
@@ -508,10 +504,6 @@
 <p>江西省: 九江市</p>
 
 <p>湖北省: 武汉市</p>
-
-<h6>苏州 (November 2014):</h6>
-
-<p>江苏省: 苏州市</p>
 
 <h6>南京 (November 2014):</h6>
 
@@ -567,6 +559,24 @@
 
 <p>陕西省: 咸阳市、西安市及临潼区</p>
 
+<h6>乌镇 (October 2016):</h6>
+
+<p>浙江省: 嘉兴市桐乡市乌镇（第四届乌镇戏剧节，<i>他有两把左轮手枪和黑白相间的眼睛</i>@水剧场）
+
+<h6>广州 (October 2016):</h6>
+
+<p>广东省: 广州市</p>
+
+<h6>南昌 (November 2016):</h6>
+
+<p>江西省: 南昌市（江西省博物馆汉代海昏侯国考古发现成果展）</p>
+
+<p>湖南省: 长沙市（折返途经）</p>
+
+<h6>洛阳 (December 2016):</h6>
+
+<p>河南省: 洛阳市（龙门，北邙山）</p>
+
 <hr />
 
 <h3><a id="museum"></a>博物馆</h3>
@@ -594,18 +604,18 @@
 <tr><td>上海中共一大会址纪念馆 (2011)</td></tr>
 <tr><td>青岛德国总督楼旧址博物馆 (2012)</td></tr>
 <tr><td>长沙铜官窑遗址博物馆 (2012)</td></tr>
-<tr><td><b>苏州博物馆</b> (2013, 2014, 2015)</td></tr>
+<tr><td><b>苏州博物馆</b> (2013, 2014, 2015, 2016)</td></tr>
 <tr><td>浙江省博物馆（孤山馆区）(2013)</td></tr>
-<tr><td>江西省博物馆 (2013)</td></tr>
+<tr><td>江西省博物馆 (2013, 2016: 南昌汉代海昏侯国考古成果展)</td></tr>
 <tr><td>无锡博物院 (2013)</td></tr>
 <tr><td>宁波天一阁博物馆 (2013)</td></tr>
 <tr><td>青海省博物馆 (2014)</td></tr>
 <tr><td>南京孙中山纪念馆 (2014)</td></tr>
 <tr><td>南京梅园新村纪念馆 (2014)</td></tr>
 <tr><td>南京中国近代史遗址博物馆（总统府）(2014)</td></tr>
-<tr><td><b>南京博物院</b> (2014)</td></tr>
+<tr><td><b>南京博物院</b> (2014, 2016)</td></tr>
 <tr><td>北京孔庙和国子监博物馆 (2014)</td></tr>
-<tr><td><b>上海博物馆</b> (2014, 2015)</td></tr>
+<tr><td><b>上海博物馆</b> (2014, 2015, 2016)</td></tr>
 <tr><td>九江庐山会议旧址纪念馆 (2014)</td></tr>
 <tr><td><b>湖北省博物馆</b> (2014)</td></tr>
 <tr><td>甘肃省博物馆 (2015)</td></tr>
@@ -621,6 +631,24 @@
 <tr><td>西安半坡博物馆 (2016)</td></tr>
 <tr><td>上海当代艺术博物馆 (2016)</td></tr>
 <tr><td><b>上海自然博物馆（山海关路新馆）</b>(2016)</td></tr>
+<tr><td>上海震旦博物馆 (2016)</td></tr>
+<tr><td>上海孙中山故居博物馆 (2016)</td></tr>
+<tr><td>长沙谭国斌当代艺术博物馆 (2016: 天地之中河南文物珍品展)</td></tr>
+<tr><td>上海当代艺术馆 (2016: 山水间特展)</td></tr>
+<tr><td>上海吴昌硕纪念馆 (2016)</td></tr>
+<tr><td>上海犹太难民纪念馆 (2016)</td></tr>
+<tr><td><b>乌镇木心美术馆</b> (2016)</td></tr>
+<tr><td>广东省博物馆 (2016)</td></tr>
+<tr><td>广州西汉南越王博物馆 (2016)</td></tr>
+<tr><td>广州博物馆（镇海楼）(2016)</td></tr>
+<tr><td><b>广州南越王宫博物馆</b> (2016)</td></tr>
+<tr><td>广东民间工艺博物馆（陈家祠）(2016)</td></tr>
+<tr><td>浙江省博物馆（武林馆区）(2016)</td></tr>
+<tr><td>洛阳龙门博物馆 (2016)</td></tr>
+<tr><td><b>洛阳博物馆</b>（洛龙新馆）(2016)</td></tr>
+<tr><td><b>洛阳古代艺术博物馆</b> (2016)</td></tr>
+<tr><td>苏州园林博物馆 (2016)</td></tr>
+<tr><td>苏州碑刻博物馆（文庙）(2016)</td></tr>
 <tr><td><br /><i>2010 至今境外部分</i></td></tr>
 <tr><td><b>台北国立故宫博物院</b> (2013)</td></tr>
 <tr><td>台北国立台湾博物馆 (2013)</td></tr>
@@ -903,6 +931,11 @@
 <td>绿城通</td>
 <td>1</td>
 </tr>
+<tr>
+<td>南昌</td>
+<td>洪城一卡通</td>
+<td>1</td>
+</tr>
 </tbody>
 </table>
 
@@ -1092,7 +1125,7 @@ if(document.body.clientWidth < 450) {
 
 <p><!--<a href="http://cnphil.com/">-->Phil Xiaojun Hu<!--</a>--></p>
 
-<p><i>Last updated: Sun Jul 24 17:06:01 UTC 2016</i></p>
+<p><i>Last updated: Thu Dec 29 06:53:47 UTC 2016</i></p>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
